syntax/seal.output
Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: variableDecl
    5     | FUNC OBJECTID '(' variables ')' TYPEID stmtBlock

    6 stmtBlock: '{' variableDecls stmts '}'

    7 variableDecls: variableDecls variableDecl
    8              | %empty

    9 variableDecl: VAR variable ';'

   10 variables: variables ',' variable
   11          | variable
   12          | %empty

   13 variable: OBJECTID TYPEID

   14 stmts: stmts stmt
   15      | %empty

   16 stmt: expr ';'
   17     | ifStmt
   18     | whileStmt
   19     | forStmt
   20     | returnStmt
   21     | continueStmt
   22     | breakStmt
   23     | stmtBlock

   24 ifStmt: IF expr stmtBlock
   25       | IF expr stmtBlock ELSE stmtBlock

   26 whileStmt: WHILE expr stmtBlock

   27 forStmt: FOR expr00 ';' expr00 ';' expr00 stmtBlock

   28 returnStmt: RETURN expr00 ';'

   29 continueStmt: CONTINUE ';'

   30 breakStmt: BREAK ';'

   31 expr00: expr
   32       | %empty

   33 expr: OBJECTID '=' expr
   34     | constant
   35     | call
   36     | '(' expr ')'
   37     | OBJECTID
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | expr '%' expr
   43     | '-' expr
   44     | expr '<' expr
   45     | expr LE expr
   46     | expr EQUAL expr
   47     | expr NE expr
   48     | expr GE expr
   49     | expr '>' expr
   50     | expr AND expr
   51     | expr OR expr
   52     | expr '^' expr
   53     | '!' expr
   54     | '~' expr
   55     | expr '&' expr
   56     | expr '|' expr

   57 call: OBJECTID '(' actuals ')'

   58 actuals: actuals ',' expr
   59        | expr
   60        | %empty

   61 constant: CONST_INT
   62         | CONST_FLOAT
   63         | CONST_BOOL
   64         | CONST_STRING


Terminals, with rules where they appear

$end (0) 0
'!' (33) 53
'%' (37) 42
'&' (38) 55
'(' (40) 5 36 57
')' (41) 5 36 57
'*' (42) 40
'+' (43) 38
',' (44) 10 58
'-' (45) 39 43
'/' (47) 41
';' (59) 9 16 27 28 29 30
'<' (60) 44
'=' (61) 33
'>' (62) 49
'^' (94) 52
'{' (123) 6
'|' (124) 56
'}' (125) 6
'~' (126) 54
error (256)
IF (258) 24 25
ELSE (260) 25
WHILE (261) 26
FOR (262) 27
BREAK (263) 30
CONTINUE (264) 29
FUNC (265) 5
RETURN (266) 28
CONST_BOOL (267) 63
CONST_INT (268) 61
CONST_STRING (269) 64
CONST_FLOAT (270) 62
VAR (271) 9
AND (274) 50
OR (275) 51
EQUAL (276) 46
NE (277) 47
GE (278) 48
LE (279) 45
OBJECTID (284) 5 13 33 37 57
TYPEID (285) 5 13
UMINUS (287)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
decl_list (46)
    on left: 2 3, on right: 1 2
decl (47)
    on left: 4 5, on right: 2 3
stmtBlock (48)
    on left: 6, on right: 5 23 24 25 26 27
variableDecls (49)
    on left: 7 8, on right: 6 7
variableDecl (50)
    on left: 9, on right: 4 7
variables (51)
    on left: 10 11 12, on right: 5 10
variable (52)
    on left: 13, on right: 9 10 11
stmts (53)
    on left: 14 15, on right: 6 14
stmt (54)
    on left: 16 17 18 19 20 21 22 23, on right: 14
ifStmt (55)
    on left: 24 25, on right: 17
whileStmt (56)
    on left: 26, on right: 18
forStmt (57)
    on left: 27, on right: 19
returnStmt (58)
    on left: 28, on right: 20
continueStmt (59)
    on left: 29, on right: 21
breakStmt (60)
    on left: 30, on right: 22
expr00 (61)
    on left: 31 32, on right: 27 28
expr (62)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56, on right: 16 24 25 26 31 33 36 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53 54 55 56 58 59
call (63)
    on left: 57, on right: 35
actuals (64)
    on left: 58 59 60, on right: 57 58
constant (65)
    on left: 61 62 63 64, on right: 34


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6


State 1

    5 decl: FUNC . OBJECTID '(' variables ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 7


State 2

    9 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 8

    variable  go to state 9


State 3

    0 $accept: program . $end

    $end  shift, and go to state 10


State 4

    1 program: decl_list .
    2 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 11
    variableDecl  go to state 6


State 5

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: FUNC OBJECTID . '(' variables ')' TYPEID stmtBlock

    '('  shift, and go to state 12


State 8

   13 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 13


State 9

    9 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 14


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 12

    5 decl: FUNC OBJECTID '(' . variables ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8

    $default  reduce using rule 12 (variables)

    variables  go to state 15
    variable   go to state 16


State 13

   13 variable: OBJECTID TYPEID .

    $default  reduce using rule 13 (variable)


State 14

    9 variableDecl: VAR variable ';' .

    $default  reduce using rule 9 (variableDecl)


State 15

    5 decl: FUNC OBJECTID '(' variables . ')' TYPEID stmtBlock
   10 variables: variables . ',' variable

    ')'  shift, and go to state 17
    ','  shift, and go to state 18


State 16

   11 variables: variable .

    $default  reduce using rule 11 (variables)


State 17

    5 decl: FUNC OBJECTID '(' variables ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 19


State 18

   10 variables: variables ',' . variable

    OBJECTID  shift, and go to state 8

    variable  go to state 20


State 19

    5 decl: FUNC OBJECTID '(' variables ')' TYPEID . stmtBlock

    '{'  shift, and go to state 21

    stmtBlock  go to state 22


State 20

   10 variables: variables ',' variable .

    $default  reduce using rule 10 (variables)


State 21

    6 stmtBlock: '{' . variableDecls stmts '}'

    $default  reduce using rule 8 (variableDecls)

    variableDecls  go to state 23


State 22

    5 decl: FUNC OBJECTID '(' variables ')' TYPEID stmtBlock .

    $default  reduce using rule 5 (decl)


State 23

    6 stmtBlock: '{' variableDecls . stmts '}'
    7 variableDecls: variableDecls . variableDecl

    VAR  shift, and go to state 2

    $default  reduce using rule 15 (stmts)

    variableDecl  go to state 24
    stmts         go to state 25


State 24

    7 variableDecls: variableDecls variableDecl .

    $default  reduce using rule 7 (variableDecls)


State 25

    6 stmtBlock: '{' variableDecls stmts . '}'
   14 stmts: stmts . stmt

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40
    '{'           shift, and go to state 21
    '}'           shift, and go to state 41

    stmtBlock     go to state 42
    stmt          go to state 43
    ifStmt        go to state 44
    whileStmt     go to state 45
    forStmt       go to state 46
    returnStmt    go to state 47
    continueStmt  go to state 48
    breakStmt     go to state 49
    expr          go to state 50
    call          go to state 51
    constant      go to state 52


State 26

   24 ifStmt: IF . expr stmtBlock
   25       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 53
    call      go to state 51
    constant  go to state 52


State 27

   26 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 54
    call      go to state 51
    constant  go to state 52


State 28

   27 forStmt: FOR . expr00 ';' expr00 ';' expr00 stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    $default  reduce using rule 32 (expr00)

    expr00    go to state 55
    expr      go to state 56
    call      go to state 51
    constant  go to state 52


State 29

   30 breakStmt: BREAK . ';'

    ';'  shift, and go to state 57


State 30

   29 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 58


State 31

   28 returnStmt: RETURN . expr00 ';'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    $default  reduce using rule 32 (expr00)

    expr00    go to state 59
    expr      go to state 56
    call      go to state 51
    constant  go to state 52


State 32

   63 constant: CONST_BOOL .

    $default  reduce using rule 63 (constant)


State 33

   61 constant: CONST_INT .

    $default  reduce using rule 61 (constant)


State 34

   64 constant: CONST_STRING .

    $default  reduce using rule 64 (constant)


State 35

   62 constant: CONST_FLOAT .

    $default  reduce using rule 62 (constant)


State 36

   33 expr: OBJECTID . '=' expr
   37     | OBJECTID .
   57 call: OBJECTID . '(' actuals ')'

    '='  shift, and go to state 60
    '('  shift, and go to state 61

    $default  reduce using rule 37 (expr)


State 37

   43 expr: '-' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 62
    call      go to state 51
    constant  go to state 52


State 38

   53 expr: '!' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 63
    call      go to state 51
    constant  go to state 52


State 39

   54 expr: '~' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 64
    call      go to state 51
    constant  go to state 52


State 40

   36 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 65
    call      go to state 51
    constant  go to state 52


State 41

    6 stmtBlock: '{' variableDecls stmts '}' .

    $default  reduce using rule 6 (stmtBlock)


State 42

   23 stmt: stmtBlock .

    $default  reduce using rule 23 (stmt)


State 43

   14 stmts: stmts stmt .

    $default  reduce using rule 14 (stmts)


State 44

   17 stmt: ifStmt .

    $default  reduce using rule 17 (stmt)


State 45

   18 stmt: whileStmt .

    $default  reduce using rule 18 (stmt)


State 46

   19 stmt: forStmt .

    $default  reduce using rule 19 (stmt)


State 47

   20 stmt: returnStmt .

    $default  reduce using rule 20 (stmt)


State 48

   21 stmt: continueStmt .

    $default  reduce using rule 21 (stmt)


State 49

   22 stmt: breakStmt .

    $default  reduce using rule 22 (stmt)


State 50

   16 stmt: expr . ';'
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr

    AND    shift, and go to state 66
    OR     shift, and go to state 67
    EQUAL  shift, and go to state 68
    NE     shift, and go to state 69
    GE     shift, and go to state 70
    LE     shift, and go to state 71
    '<'    shift, and go to state 72
    '>'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    '&'    shift, and go to state 79
    '|'    shift, and go to state 80
    '^'    shift, and go to state 81
    ';'    shift, and go to state 82


State 51

   35 expr: call .

    $default  reduce using rule 35 (expr)


State 52

   34 expr: constant .

    $default  reduce using rule 34 (expr)


State 53

   24 ifStmt: IF expr . stmtBlock
   25       | IF expr . stmtBlock ELSE stmtBlock
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr

    AND    shift, and go to state 66
    OR     shift, and go to state 67
    EQUAL  shift, and go to state 68
    NE     shift, and go to state 69
    GE     shift, and go to state 70
    LE     shift, and go to state 71
    '<'    shift, and go to state 72
    '>'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    '&'    shift, and go to state 79
    '|'    shift, and go to state 80
    '^'    shift, and go to state 81
    '{'    shift, and go to state 21

    stmtBlock  go to state 83


State 54

   26 whileStmt: WHILE expr . stmtBlock
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr

    AND    shift, and go to state 66
    OR     shift, and go to state 67
    EQUAL  shift, and go to state 68
    NE     shift, and go to state 69
    GE     shift, and go to state 70
    LE     shift, and go to state 71
    '<'    shift, and go to state 72
    '>'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    '&'    shift, and go to state 79
    '|'    shift, and go to state 80
    '^'    shift, and go to state 81
    '{'    shift, and go to state 21

    stmtBlock  go to state 84


State 55

   27 forStmt: FOR expr00 . ';' expr00 ';' expr00 stmtBlock

    ';'  shift, and go to state 85


State 56

   31 expr00: expr .
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr

    AND    shift, and go to state 66
    OR     shift, and go to state 67
    EQUAL  shift, and go to state 68
    NE     shift, and go to state 69
    GE     shift, and go to state 70
    LE     shift, and go to state 71
    '<'    shift, and go to state 72
    '>'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    '&'    shift, and go to state 79
    '|'    shift, and go to state 80
    '^'    shift, and go to state 81

    $default  reduce using rule 31 (expr00)


State 57

   30 breakStmt: BREAK ';' .

    $default  reduce using rule 30 (breakStmt)


State 58

   29 continueStmt: CONTINUE ';' .

    $default  reduce using rule 29 (continueStmt)


State 59

   28 returnStmt: RETURN expr00 . ';'

    ';'  shift, and go to state 86


State 60

   33 expr: OBJECTID '=' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    expr      go to state 87
    call      go to state 51
    constant  go to state 52


State 61

   57 call: OBJECTID '(' . actuals ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 40

    $default  reduce using rule 60 (actuals)

    expr      go to state 88
    call      go to state 51
    actuals   go to state 89
    constant  go to state 52


State 62

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | '-' expr .
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr

    '&'  shift, and go to state 79
    '|'  shift, and go to state 80
    '^'  shift, and go to state 81

    $default  reduce using rule 43 (expr)


State 63

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   53     | '!' expr .
   55     | expr . '&' expr
   56     | expr . '|' expr

    '&'  shift, and go to state 79
    '|'  shift, and go to state 80
    '^'  shift, and go to state 81

    $default  reduce using rule 53 (expr)


State 64

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   54     | '~' expr .
   55     | expr . '&' expr
   56     | expr . '|' expr

    $default  reduce using rule 54 (expr)


State 65

   36 expr: '(' expr . ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . EQUAL expr
   47     | expr . NE expr
   48     | expr . GE expr
   49     | expr . '>' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . '|' expr
